nettoyage du code

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 </head>
 <body>
 
-    <!--<div class="container-fluid">-->
         <!--Header  -->
         <section class="container-fluid l-header">
             <div class="container">
@@ -216,7 +215,6 @@
                 </div>
             </div>
         </section >
-
         <section class="container-fluid l-projects-content">
             <div class="container projects">
                 <div class="projects-content">
@@ -236,8 +234,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <h4>Lorem ipsum dolor sit amet, consec
-                                            tetur adipiscing elit.</h4>
+                                        <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in egestas lectus. Etiam tempor odio tellus, at bibendum neque faucibus quis. Sed vel facilisis elit. Nullam fringilla pharetra diam non accumsan. Morbi eget aliquam mauris.</p>
                                     </div>
                                 </div>
@@ -273,7 +270,6 @@
                     </div>
             </div>
         </section>
-
         <section class="container-fluid l-projects-footer">
             <div class="container projects">
                 <div class="col-md-12 project-footer">
@@ -320,8 +316,7 @@
             </div>
         </section>
 
-
-    <!--Skype  -->
+        <!--Skype  -->
         <section class="container-fluid l-skype">
             <div class="container">
                 <div class="col-md-12 skype">
@@ -550,21 +545,20 @@
             </div>
         </footer>
 
-    <!--Copyright -->
-    <section class="container-fluid l-copyright">
-        <div class="container copyright">
-            <div class="col-md-4">
-                <p>&#169 Copyright 2015 Guitar. All rights reserved</p>
+        <!--Copyright -->
+        <section class="container-fluid l-copyright">
+            <div class="container copyright">
+                <div class="col-md-4">
+                    <p>&#169 Copyright 2015 Guitar. All rights reserved</p>
+                </div>
+                <div class="col-md-2 col-md-offset-6 copyright-reseau">
+                    <p><i class="fa fa-facebook"></i></p>
+                    <p><i class="fa fa-twitter"></i></p>
+                    <p><i class="fa fa-google"></i></p>
+                    <p><i class="fa fa-rss"></i></p>
+                </div>
             </div>
-            <div class="col-md-2 col-md-offset-6 copyright-reseau">
-                <p><i class="fa fa-facebook"></i></p>
-                <p><i class="fa fa-twitter"></i></p>
-                <p><i class="fa fa-google"></i></p>
-                <p><i class="fa fa-rss"></i></p>
-
-            </div>
-
-    </section>
+        </section>
 
 
 
