--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
         <section class="container-fluid l-slide">
             <iframe src="" frameborder="0" height="865" width></iframe>
             <div class="slide-button">
-                <p><i class="fa fa-angle-up"></i></p>
+                <p><i class="fa fa-angle-up fa-2x"></i></p>
                 <p><img src="img/diamond-white.png" alt=""></p>
                 <p><img src="img/diamond-or.png" alt=""></p>
                 <p><img src="img/diamond-white.png" alt=""></p>
-                <p><i class="fa  fa-angle-down"></i></p>
+                <p><i class="fa  fa-angle-down fa-2x"></i></p>
             </div>
             <div class="container slide">
                 <div class="col-md-12">
@@ -109,9 +109,11 @@
 
 
             <div class="container services">
-                <div class="col-md-2 col-md-offset-5 services-btn-bg">
-                    <img src="img/btn-background.png" alt="">
-                    <div class="services-chevron"><i class="fa fa-chevron-down"></i></div>
+                <div class="col-md-2 col-md-offset-5 ">
+                    <div class="services-btn-bg">
+                        <img src="img/btn-background.png" width="186" alt="">
+                        <p class="services-chevron"><i class="fa fa-chevron-down"></i></p>
+                    </div>
                 </div>
                 <div class="col-md-12 ">
                     <div class="col-md-10 col-md-offset-1">
@@ -121,24 +123,24 @@
                 </div>
                 <div class="col-md-12 services-box">
                     <div class="col-md-2 col-md-offset-1">
-                        <div>
-                            <img src="img/services-icon-bg.png" class="service-icon-bg" alt="">
-                            <img src="img/microphon-icon.png" class="service-icon" alt="">
+                        <div class="services-box-img">
+                            <img src="img/services-icon-bg.png"  class="service-icon-bg" alt="">
+                            <img src="img/microphon-icon.png" width="" class="service-icon" alt="">
                         </div>
                         <p>Recording Services</p>
                     </div>
-                    <div class="col-md-2 col-lg-offset-2">
-                        <div>
+                    <div class="col-md-2 col-md-offset-2">
+                        <div class="services-box-img">
                             <img src="img/services-icon-bg.png" class="service-icon-bg" alt="">
                             <img src="img/icon-paper.png" class="service-icon" alt="">
                         </div>
 
                         <p>Your get the certificate</p>
                     </div>
-                    <div class="col-md-2 col-lg-offset-2">
-                        <div>
+                    <div class="col-md-2 col-md-offset-2">
+                        <div class="services-box-img">
                             <img src="img/services-icon-bg.png" class="service-icon-bg" alt="">
-                            <img src="img/icon-webcam.png" class="service-icon" alt="">
+                            <img src="img/icon-webcam.png" class="service-icon-other" alt="">
                         </div>
 
                         <p>All lessons are via skype</p>
@@ -471,9 +473,13 @@
                             <p class="category">Music teacher</p>
                         </div>
                     </div>
+                    <div class="col-md-1 testimonials-btn">
+                        <button><i class="fa fa-chevron-right"></i></button>
+                    </div>
 
 
-                        <div class="col-md-2 col-md-offset-5 testimonials-btn-bg">
+
+                    <div class="col-md-2 col-md-offset-5 testimonials-btn-bg">
                             <img src="img/btn-map.png" alt="">
                             <div class="testimonials-map"><i class="fa fa-map-marker fa-2x "></i></div>
                         </div>
