responsive menu + nettoyage fichier

--- a/index.html
+++ b/index.html
@@ -65,28 +65,31 @@
             <div class="container-fluid l-menu">
                  <div class="container menu">
                      <div class="row">
-                         <div class="col-md-12 ot_tablet">
-                             <div class="col-md-2 menu-item menu-item-first"><a href="#">Home</a></div>
-                             <div class="col-md-2 menu-item menu-item-two"><a href="#">About us</a></div>
-                             <div class="col-md-2 menu-item"><a href="#">Lessons</a></div>
-                             <div class="col-md-2 menu-item"><a href="#">Portfolio</a></div>
-                             <div class="col-md-2 menu-item menu-item-five"><a href="#">Blog</a></div>
-                             <div class="col-md-2 menu-item menu-item-last"><a href="#">Contact</a></div>
-                         </div>
-                     </div>
+                         <nav class=" navbar navbar-default">
+                             <!--NavBar Collapse-->
+                             <div class="navbar-header">
+                                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" >
+                                     <span class="sr-only">Toggle navigation</span>
+                                     <span class="icon-bar"></span>
+                                     <span class="icon-bar"></span>
+                                     <span class="icon-bar"></span>
+                                 </button>
+                             </div>
+                             <!--FIN NavBar Collapse-->
 
-                     <!--NavBar Collapse-->
-                     <div class="navbar-header">
-                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                             <span class="sr-only">Toggle navigation</span>
-                             <span class="icon-bar"></span>
-                             <span class="icon-bar"></span>
-                             <span class="icon-bar"></span>
-                         </button>
+                             <div id="menu" class="container-fluid collapse navbar-collapse menu">
+                                 <div class="nav navbar-nav col-sm-12 col-md-12">
+                                     <a href="#" class="col-sm-12 col-md-2 menu-item menu-item-first">Home</a>
+                                     <a href="#" class="col-sm-12 col-md-2 menu-item menu-item-two">About us</a>
+                                     <a href="#" class="col-sm-12 col-md-2 menu-item">Lessons</a>
+                                     <a href="#" class="col-sm-12 col-md-2 menu-item">Portfolio</a>
+                                     <a href="#" class="col-sm-12 col-md-2 menu-item menu-item-five">Blog</a>
+                                     <a href="#" class="col-sm-12 col-md-2 menu-item menu-item-last">Contact</a>
+                                 </div>
+                             </div>
+                         </nav>
                      </div>
-                     <!--FIN NavBar Collapse-->
                  </div>
-
             </div>
         </section>
 
