--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                     <div class="col-sm-1 col-sm-offset-4 col-md-1 col-md-offset-10">
                         <button class="button-pagination "><i class="fa fa-chevron-left"></i></button>
                     </div>
-                    <div class="col-sm-1 col-sm-offset-1 col-md-1">
+                    <div class="col-sm-1 col-sm-offset-1 col-md-1 col-sm-offset-0">
                         <button class="button-pagination active"><i class="fa fa-chevron-right"></i></button>
                     </div>
                 </div>
