--- a/index.html
+++ b/index.html
@@ -336,10 +336,10 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 project-pagination">
-                    <div class="col-xs-1 col-xs-offset-4 col-sm-1 col-sm-offset-4 col-md-1 col-md-offset-10">
+                    <div class="col-xs-3 col-xs-offset-3 col-sm-2 col-sm-offset-4 col-md-1 col-md-offset-10">
                         <button class="button-pagination "><i class="fa fa-chevron-left"></i></button>
                     </div>
-                    <div class="col-xs-1 col-xs-offset-1 col-sm-1 col-sm-offset-1 col-md-1 col-sm-offset-0">
+                    <div class="col-xs-3  col-sm-1 col-sm-offset-1 col-md-1 col-sm-offset-0">
                         <button class="button-pagination active"><i class="fa fa-chevron-right"></i></button>
                     </div>
                 </div>
@@ -358,7 +358,7 @@
                             <p class="skype-text">call us on skype!<br> <span>and learn how to play guitar</span></p>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-12 col-md-6">
+                    <div class="col-xs-12 col-sm-12 col-md-6 skype-center">
                         <div class="col-xs-6 col-sm-6 col-md-6"><button class="btn-action">more details</button></div>
                         <div class="col-xs-6 col-sm-6 col-md-6"><button class="btn-action btn-active">choose your plan</button></div>
                     </div>
@@ -412,8 +412,8 @@
                                     </div>
                                 </div>
                             </div>
-                        <div class="col-md-6 latestNews-col-right">
-                                <div class="col-md-12 latestNews-box">
+                        <div class="col-md-6 latestNews-col-right not_mobile">
+                                <div class="col-xs-12 col-md-12 latestNews-box">
                                     <img src="" height="124" width="170" alt="" class="latestNews-img">
                                     <div class="latestNews-box-content">
                                         <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>
@@ -592,10 +592,10 @@
         <!--Copyright -->
         <section class="container-fluid l-copyright">
             <div class="container copyright">
-                <div class="col-sm-4 col-md-4">
+                <div class="col-xs-12 col-sm-4 col-md-4">
                     <p class="copyright-text">&#169 Copyright 2015 Guitar. All rights reserved</p>
                 </div>
-                <div class="col-sm-2 col-sm-offset-6 col-md-2 col-md-offset-6 copyright-reseau">
+                <div class="col-xs-12 col-sm-2 col-sm-offset-6 col-md-2 col-md-offset-6 copyright-reseau">
                     <p><i class="fa fa-facebook"></i></p>
                     <p><i class="fa fa-twitter"></i></p>
                     <p><i class="fa fa-google"></i></p>
