integration normalement termine

--- a/index.html
+++ b/index.html
@@ -41,23 +41,25 @@
             <div class="container">
                  <div class="row header">
                      <div class="col-xs-12 col-md-12 header-box">
-                         <div class="col-xs-6 col-md-2 header-logo">
+                         <a href="#">
+                             <div class="col-xs-6 col-md-2 header-logo">
                              <img src="img/logo.png" alt="Logo du musicien">
                              <h1>Guitar</h1>
                          </div>
+                         </a>
                          <div class="col-xs-12 col-md-2 col-md-offset-4 header-contact not_tablet not_mobile">
                              <p><i class="fa fa-skype fa-1x icon-default"></i></p>
-                             <p>guitarlessons</p>
+                             <a href="tel:01304560865"><p>guitarlessons</p></a>
                          </div>
                          <div class="col-md-2 header-contact  not_mobile">
                              <p><i class="fa fa-phone fa-1x icon-default"></i></p>
-                             <p>013 045 608 65</p>
+                             <a href="tel:01304560865"><p>013 045 608 65</p></a>
                          </div>
                          <div class="col-xs-6 col-md-2 header-icon">
-                             <p><i class="fa fa-facebook fa-1x icon"></i></p>
-                             <p><i class="fa fa-twitter fa-1x icon"></i></p>
-                             <p><i class="fa fa-google fa-1x icon"></i></p>
-                             <p><i class="fa fa-rss fa-1x icon"></i></p>
+                             <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook fa-1x"></i></a>
+                             <a href="http://www.twitter.com" target="_blank"><i class="fa fa-twitter fa-1x"></i></a>
+                             <a href="http://www.google.com" target="_blank"><i class="fa fa-google fa-1x"></i></a>
+                             <a href="#"><i class="fa fa-rss fa-1x"></i></a>
                          </div>
                      </div>
                  </div>
@@ -94,26 +96,64 @@
         </section>
 
         <!--Slide  -->
-        <section class="container-fluid l-slide not_tablet not-mobile">
-            <iframe src="" frameborder="0" height="865" width></iframe>
-            <div class="slide-button">
-                <p><i class="fa fa-angle-up fa-2x"></i></p>
-                <p><img src="img/diamond-white.png" alt=""></p>
-                <p><img src="img/diamond-or.png" alt=""></p>
-                <p><img src="img/diamond-white.png" alt=""></p>
-                <p><i class="fa  fa-angle-down fa-2x"></i></p>
-            </div>
-            <div class="container slide">
-                <div class="col-md-12">
-                    <div class="col-md-8 col-md-offset-4">
-                        <div class="slide-test">
+        <section id="carousel-example-generic" class="carousel container-fluid l-slide not_tablet not-mobile" data-ride="carousel">
+
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+
+
+                <div class="item active">
+                    <video  autoplay controls="controls" poster="" width="100%" alt="...">
+                        <source src="video/slide1.mp4" type="video/mp4"/>
+                    </video>
+
+                    <div class="col-lg-12 carousel-caption slide">
+                        <div class="col-md-8 col-md-offset-4 slide-test">
                             <p><strong>check our video</strong> <span>learning in 6 weeks</span></p>
                         </div>
-                    </div>
-                    <div class="col-md-2 col-md-offset-10">
-                        <div class="slide-on">
-                            <img src="img/lecteur-play.png" width="58" height="58" alt="Vignette">
+                        <div class="col-md-2 col-md-offset-10">
+                            <div class="slide-on">
+                                <img src="img/lecteur-play.png" aria-controls="" width="58" height="58" alt="Vignette" />
+                            </div>
                         </div>
+                        </div>
+                    </div>
+
+                <div class="item">
+                    <video autoplay controls="controls" poster="" width="100%" alt="...">
+                        <source src="video/slide2.mp4" type="video/mp4"/>
+                    </video>
+                    <div class="col-lg-12 carousel-caption slide">
+                        <div class="col-md-8 col-md-offset-4 slide-test">
+                            <p><strong>check our video</strong> <span>learning in 6 weeks</span></p>
+                        </div>
+                        <div class="col-md-2 col-md-offset-10">
+                            <div class="slide-on">
+                                <img src="img/lecteur-play.png" width="58" height="58" alt="Vignette" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Controls prev / indicator / next  -->
+            <div class="slide-button">
+                <div class="col-md-12 slide-button-box ">
+                    <div class="col-md-12 btn-up ">
+                        <a class="carousel-control " href="#carousel-example-generic" role="button" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
+                        </a>
+                    </div>
+                    <ol class="carousel-indicators col-md-12">
+                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    </ol>
+                    <div class="col-md-12 btn-down">
+                        <a class="carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -142,11 +182,11 @@
                             <div class="service-icon-bg1">
                                 <img src="img/services-icon-bg.png" width="" class="service-icon-bg" alt="">
                                 <div class="service-icon" >
-                                    <img src="img/microphon-icon.png" class="ico"  alt="">
+                                    <img src="img/microphon-icon.png"  class="ico"  alt="">
                                 </div>
                             </div>
                         </div>
-                        <p class="col-xs-9 col-xs-offset-1">Recording Services</p>
+                        <p class="col-xs-9 col-xs-offset-1 col-md-12">Recording Services</p>
                     </div>
 
                     <div class="col-xs-12 col-sm-12 col-md-2 col-md-offset-2 services-box3">
@@ -158,7 +198,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p class="col-xs-9 col-xs-offset-1">Your get the certificate</p>
+                        <p class="col-xs-9 col-xs-offset-1 col-md-9">Your get the certificate</p>
                     </div>
 
                     <div class="col-xs-12 col-sm-12 col-md-2 col-md-offset-2 services-box3">
@@ -247,12 +287,10 @@
                 <div class="projects-content">
                     <div class="col-sm-12 col-md-12">
                         <div class="col-sm-12 col-md-8 project-slide">
-                            <!--<div class="project-slide">-->
-                                <img src="" width="100%" height="570" alt="" style="background-color: #9e9e9e">
-                            <!--</div>-->
+                            <img src="img/articles/musicienne-nature.jpg" width="100%" height="570" alt="" class="img-responsive" >
                             <div class="col-xs-12 col-sm-12 col-md-12">
                                 <div class="projects-playing ">
-                                    <div class="col-xs-1 col-xs-offset-4 col-sm-1 col-sm-offset-4 col-md-1 col-md-offset-4">
+                                    <div class="col-xs-3 col-xs-offset-2 col-sm-1 col-sm-offset-4 col-md-1 col-md-offset-4">
                                         <p class="projects-playing-btn-left"><i class="fa fa-angle-left fa-2x"></i></p>
                                     </div>
                                     <div class="col-xs-2 col-sm-2 col-md-2 projects-playing-button">
@@ -260,7 +298,7 @@
                                         <p><img src="img/diamond-or.png" alt=""></p>
                                         <p><img src="img/icon-diamond.png" alt=""></p>
                                     </div>
-                                    <div class="col-xs-1 col-sm-1 col-md-1">
+                                    <div class="col-xs-1 col-xs-offset-1 col-sm-1 col-md-1">
                                         <p class="projects-playing-btn-right"><i class="fa  fa-angle-right fa-2x"></i></p>
                                     </div>
                                 </div>
@@ -290,7 +328,10 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-12 col-md-12 project-social">
-                                        <p>Share : <i class="fa fa-facebook"></i> <i class="fa fa-twitter"></i><i class="fa fa-google"></i></p>
+                                        <p>Share : </p>
+                                            <a href="http://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
+                                            <a href="http://www.twitter.com" target="_blank"><i class="fa fa-twitter"></i></a>
+                                            <a href="http://www.google.com" target="_blank"><i class="fa fa-google"></i></a>
                                     </div>
                                 </div>
 
@@ -305,31 +346,31 @@
                 <div class="col-xs-12 col-sm-12 col-md-12 project-footer">
 
                     <div class="col-xs-12 col-sm-12 col-md-4 project-footer-left">
-                        <img src="" height="370"  alt="">
+                        <!--<img src="" class="img-responsive" height="370" class="img-responsive" alt="">-->
                         <div class="project-footer-icon-folder">
                             <p><i class="fa fa-folder-open"></i> music</p>
                         </div>
                     </div>
 
 
-                    <div class="col-xs-12 col-sm-12 col-md-3 project-footer-box-middle">
+                    <div class="col-xs-12 col-sm-12 col-md-4 project-footer-box-middle">
 
                         <div class="col-xs-12 col-sm-6 col-md-12 project-footer-middle project-footer-middle-left">
-                            <img src=""  height="170"  alt="">
+                            <img src="img/articles/rock.jpg"  height="170"  alt="" class="img-responsive">
                             <div class="project-footer-icon-folder">
                                 <p><i class="fa fa-folder-open"></i> rock</p>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-12 project-footer-middle project-footer-middle-right">
-                            <img src=""  height="170"  alt="">
+                            <img src="img/articles/lessons.jpg"  height="170"  alt="" class="img-responsive">
                             <div class="project-footer-icon-folder">
                                 <p><i class="fa fa-folder-open"></i> lessons</p>
                             </div>
                         </div>
 
                     </div>
-                    <div class="col-xs-12 col-sm-12 col-md-5 project-footer-right">
-                            <img src=""   height="370"  alt="">
+                    <div class="col-xs-12 col-sm-12 col-md-4 project-footer-right">
+                            <!--<img src=""   height="370"  alt="">-->
                             <div class="project-footer-icon-folder">
                                 <p><i class="fa fa-folder-open"></i> shows</p>
                             </div>
@@ -414,7 +455,7 @@
                             </div>
                         <div class="col-md-6 latestNews-col-right not_mobile">
                                 <div class="col-xs-12 col-md-12 latestNews-box">
-                                    <img src="" height="124" width="170" alt="" class="latestNews-img">
+                                    <img src="" height="124" width="170" alt="" class="latestNews-img latestNews-img1">
                                     <div class="latestNews-box-content">
                                         <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>
                                         <p class=""><i class="fa fa-folder-open"></i>  guitar lesson</p>
@@ -432,7 +473,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-12 latestNews-box">
-                                    <img src="" height="124" width="170" alt="" class="latestNews-img">
+                                    <img src="" height="124" width="170" alt="" class="latestNews-img latestNews-img2">
                                     <div class="latestNews-box-content">
                                         <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>
                                         <p class=""><i class="fa fa-folder-open"></i>  guitar lesson</p>
@@ -451,7 +492,7 @@
 
                                 </div>
                                 <div class="col-md-12 latestNews-box latestNews-box-last">
-                                    <img src="" height="124" width="170" alt="" class="latestNews-img">
+                                    <img src="" height="124" width="170" alt="" class="latestNews-img latestNews-img3">
                                     <div class="latestNews-box-content">
                                         <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>
                                         <p class=""><i class="fa fa-folder-open"></i>  guitar lesson</p>
@@ -495,7 +536,7 @@
 
                     <div class="col-xs-12 col-sm-10 col-md-10">
                         <div class="col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1">
-                            <p class="testimonials-avatar"><img src="img/image-avatar.png" alt=""></p>
+                            <p class="testimonials-avatar"><img src="img/articles/image-avatar.png" alt=""></p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in egestas lectus. Etiam tempor odio tellus, at bibendum neque faucibus quis. Sed vel facilisis elit. Nullam fringilla pharetra diam non accumsan. Morbi eget aliquam mauris. Etiam vehicula efficitur mi.</p>
                             <p class="author">Andreea Koronikova</p>
                             <p class="category">Music teacher</p>
@@ -531,7 +572,7 @@
         <!--MAp  -->
         <section class="container-fluid l-map">
             <div class="map">
-                <img src=""  height="655" width="100%">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22232.56590700466!2d5.4307844308445405!3d45.84988356285915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478b46765f67c12d%3A0x80477f7dd067de3d!2sVillebois!5e0!3m2!1sfr!2sfr!4v1466345284208" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
                 <div class="map-modal">
 
@@ -596,10 +637,10 @@
                     <p class="copyright-text">&#169 Copyright 2015 Guitar. All rights reserved</p>
                 </div>
                 <div class="col-xs-12 col-sm-2 col-sm-offset-6 col-md-2 col-md-offset-6 copyright-reseau">
-                    <p><i class="fa fa-facebook"></i></p>
-                    <p><i class="fa fa-twitter"></i></p>
-                    <p><i class="fa fa-google"></i></p>
-                    <p><i class="fa fa-rss"></i></p>
+                    <p><a href="http://facebook.com" target="_blank"><i class="fa fa-facebook"></i></a></p>
+                    <p><a href="http://twitter.com" target="_blank"><i class="fa fa-twitter"></i></a></p>
+                    <p><a href="http://google.com" target="_blank"><i class="fa fa-google"></i></a></p>
+                    <p><a href="#" target="_blank"><i class="fa fa-rss"></i></a></p>
                 </div>
             </div>
         </section>
